<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sidecurb</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="ask_login">Already have an account?</string>
    <string name="signin">Sign in</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email">Email</string>
    <string name="emailinput">Email</string>
    <string name="password">Password</string>
    <string name="namelabel">Name</string>
    <string name="nameinput">Name</string>
    <string name="surnamelabel">Surname</string>
    <string name="surnameinput">Surname</string>
    <string name="tel">Telephone</string>
    <string name="telinput">Telephone</string>
    <string name="card">Card</string>
    <string name="cardinput">Card</string>
    <string name="user">User</string>
    <string name="userinput">User</string>
    <string name="passwordinput">Password</string>
    <string name="loginbtn">Login</string>
    <string name="title_activity_login_activity2">Login</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main_screen">Stores</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_product_page">Details</string>
    <string name="title_activity_orders">Orders</string>
    <string name="registerbtn">Register</string>
    <string name="languageupdate">Change Language</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="readytext">Ready in 2 hours!</string>
    <string name="description">Description: </string>
    <string name="price">Price: </string>
    <string name="empty"></string>
    <string name="buy">Buy!</string>
    <string name="updatebtn">Update</string>
    <string name="logout">Log Out</string>
    <string name="mult">x</string>
    <string name="sums">Complete Payment - Total:</string>
    <string name="euro">€</string>
    <string name="retypepass">Retype Password</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="passReset">Password Reset</string>
    <string name="accountDetails">Account Details</string>
    <string name="creditcard">Credit Card</string>
    <string name="emailpass">Email</string>
    <string name="emailpassbtn">Send Email</string>
    <string name="title_activity_summary">Summary</string>
    <string name="sum">Total Cost :</string>
    <string name="detailsTitle"><u>Delivery Details</u></string>
    <string name="complete">Complete Order</string>
    <string name="alertcart">There is a pending cart from another shop.Do you want to delete it?</string>
    <string name="speak">Voice Recognition</string>
    <string name="activeorders">Active Orders</string>
    <string name="orderhistory">Order History</string>
    <string name="zeroQnt">The quantity is 0.</string>
</resources>
