<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity" >
	<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> 
	    <LinearLayout      
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	    	>
	    
	    <LinearLayout      
	        android:layout_width="fill_parent"
	    	android:layout_height="60dp"
	    	android:orientation="horizontal"
	    	android:id="@+id/sum"
	    	>
		    
	        <TextView
	            android:id="@+id/labelsum"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:text="@string/sum"
	            android:textSize="20sp" />
	        
		    <TextView 
		        android:id="@+id/sumval"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"	        />
		</LinearLayout>  	
     	<TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/detailsTitle"
            android:textSize="20sp"
            android:paddingBottom="20dp" />   
	    <LinearLayout      
	        android:layout_width="fill_parent"
	    	android:layout_height="60dp"
	    	android:orientation="horizontal"
	    	android:id="@+id/user"
	    	>
		    
	        <TextView
	            android:id="@+id/labeluser"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:text="@string/user"
	            android:textSize="20sp" />
	        
		    <EditText 
		        android:id="@+id/userinput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/userinput"
		        android:textSize="15sp"	        />
		</LinearLayout>    
	
	    
	     <LinearLayout
	        android:id="@+id/name"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:orientation="horizontal"
	        android:layout_below="@+id/user" >
		    
	       	<TextView
	       	    android:id="@+id/namelabel"
	       	    android:layout_width="140dp"
	       	    android:layout_height="wrap_content"
	       	    android:layout_alignParentLeft="true"
	       	    android:layout_alignParentRight="true"
	       	    android:text="@string/namelabel"
	       	    android:textSize="20sp" />
	
	    	<EditText 
		        android:id="@+id/nameinput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/nameinput"
		        android:textSize="15sp"
		        />
		</LinearLayout>     
		<LinearLayout
	        android:id="@+id/surname"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:orientation="horizontal"
	        android:layout_below="@+id/name" >
		    
	       	<TextView
	       	    android:id="@+id/surnamelabel"
	       	    android:layout_width="140dp"
	       	    android:layout_height="wrap_content"
	       	    android:layout_alignParentLeft="true"
	       	    android:layout_alignParentRight="true"
	       	    android:text="@string/surnamelabel"
	       	    android:textSize="20sp" />
	
	    	<EditText 
		        android:id="@+id/surnameinput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/surnameinput"
		        android:textSize="15sp"
		        />
		</LinearLayout>
		<LinearLayout      
	       	android:layout_width="fill_parent"
	   		android:layout_height="60dp"
	   		android:orientation="horizontal"
	       	android:layout_below="@+id/surname" 
	   		android:id="@+id/mail">
		    
	        <TextView
	            android:id="@+id/labelmail"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:text="@string/email"
	            android:textSize="20sp" />
	        
		    <EditText 
		        android:id="@+id/emailinput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/emailinput"
		        android:textSize="15sp"	        />
		</LinearLayout> 
		<LinearLayout      
	        android:layout_width="fill_parent"
	    	android:layout_height="60dp"
	    	android:orientation="horizontal" 
	    	android:id="@+id/tel">
		    
	        <TextView
	            android:id="@+id/labeltel"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:text="@string/tel"
	            android:textSize="20sp" />
	        
		    <EditText 
		        android:id="@+id/telinput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/telinput"
		        android:textSize="15sp"	        />
		</LinearLayout>    
		
		<LinearLayout      
	        android:layout_width="fill_parent"
	    	android:layout_height="60dp"
	    	android:orientation="horizontal"
	        android:layout_below="@+id/tel" 
	    	android:id="@+id/card">
		    
	        <TextView
	            android:id="@+id/labelcard"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:text="@string/card"
	            android:textSize="20sp" />
	        
		    <EditText 
		        android:id="@+id/cardinput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/cardinput"
		        android:textSize="15sp"	        />
		</LinearLayout>
		<Button
	        android:id="@+id/btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:padding="20dp"
	        android:textSize="18sp"
	        android:text="@string/complete"
	        
	        />  
		</LinearLayout>
	</ScrollView>
	<ProgressBar
	   android:id="@+id/progress"
	   style="?android:attr/progressBarStyle"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:layout_centerHorizontal="true" />
    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>
    
    
    </android.support.v4.widget.DrawerLayout>
