<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".CategoriesActivity" >
	<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> 
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sidecurb.AccountActivity" >
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="60dp"
    	android:orientation="horizontal"
    	android:weightSum="3"
    	android:id="@+id/tabbuttons">
    <Button
        android:id="@+id/showaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10sp"
        android:text="@string/accountDetails" /> 
        
    <Button
        android:id="@+id/showpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10sp"
        android:text="@string/passReset" />
    
    <Button
        android:id="@+id/showcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10sp"
        android:text="@string/creditcard" /> 
    
    </LinearLayout>
     
    <LinearLayout      
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:id="@+id/vlayout"
    	android:layout_below="@+id/tabbuttons">
    <LinearLayout      
        android:layout_width="fill_parent"
    	android:layout_height="60dp"
    	android:orientation="horizontal"
    	android:id="@+id/user"
    	>
	    
        <TextView
            android:id="@+id/labeluser"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/user"
            android:textSize="20sp" />
        
	    <EditText 
	        android:id="@+id/userinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/userinput"
	        android:textSize="15sp"	        />
	</LinearLayout>    

    
     <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/user" >
	    
       	<TextView
       	    android:id="@+id/namelabel"
       	    android:layout_width="140dp"
       	    android:layout_height="wrap_content"
       	    android:layout_alignParentLeft="true"
       	    android:layout_alignParentRight="true"
       	    android:text="@string/namelabel"
       	    android:textSize="20sp" />

    	<EditText 
	        android:id="@+id/nameinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/nameinput"
	        android:textSize="15sp"
	        />
	</LinearLayout>     
	<LinearLayout
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/name" >
	    
       	<TextView
       	    android:id="@+id/surnamelabel"
       	    android:layout_width="140dp"
       	    android:layout_height="wrap_content"
       	    android:layout_alignParentLeft="true"
       	    android:layout_alignParentRight="true"
       	    android:text="@string/surnamelabel"
       	    android:textSize="20sp" />

    	<EditText 
	        android:id="@+id/surnameinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/surnameinput"
	        android:textSize="15sp"
	        />
	</LinearLayout>
		<LinearLayout      
        android:layout_width="fill_parent"
    	android:layout_height="60dp"
    	android:orientation="horizontal"
        android:layout_below="@+id/surname" 
    	android:id="@+id/mail">
	    
        <TextView
            android:id="@+id/labelmail"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/email"
            android:textSize="20sp" />
        
	    <EditText 
	        android:id="@+id/emailinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/emailinput"
	        android:textSize="15sp"	        />
	</LinearLayout> 
	
    <Button
        android:id="@+id/updatebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/emailinput"
        android:text="@string/updatebtn" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/passreset"
    android:layout_below="@+id/tabbuttons"
    android:visibility="gone" >
    
    <LinearLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/user" >
	    
       	<TextView
       	    android:id="@+id/labelpass"
       	    android:layout_width="140dp"
       	    android:layout_height="wrap_content"
       	    android:layout_alignParentLeft="true"
       	    android:layout_alignParentRight="true"
       	    android:text="@string/newpass"
       	    android:textSize="20sp" />

    	<EditText 
	        android:id="@+id/passwordinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/newpass"
	        android:textSize="15sp"
	        android:inputType="textPassword"
	        />
    	
    	</LinearLayout>
    	
    <LinearLayout
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/pass" >
	    
       	<TextView
       	    android:id="@+id/labelpass2"
       	    android:layout_width="140dp"
       	    android:layout_height="wrap_content"
       	    android:layout_alignParentLeft="true"
       	    android:layout_alignParentRight="true"
       	    android:text="@string/retypepass"
       	    android:textSize="20sp" />

    	<EditText 
	        android:id="@+id/passwordinput2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/retypepass"
	        android:textSize="15sp"
	        android:inputType="textPassword"
	        />
    	
    	</LinearLayout>
    	
    <LinearLayout
        android:id="@+id/oldpass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/pass2" >
	    
       	<TextView
       	    android:id="@+id/labeloldpass"
       	    android:layout_width="140dp"
       	    android:layout_height="wrap_content"
       	    android:layout_alignParentLeft="true"
       	    android:layout_alignParentRight="true"
       	    android:text="@string/oldpass"
       	    android:textSize="20sp" />

    	<EditText 
	        android:id="@+id/oldpasswordinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/oldpass"
	        android:textSize="15sp"
	        android:inputType="textPassword"
	        />
    	
    	</LinearLayout>
    	<Button
        android:id="@+id/updatepassbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/oldpasswordinput"
        android:text="@string/updatebtn" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/cardlayout"
    android:layout_below="@id/tabbuttons"
    android:visibility="gone" >
	<LinearLayout      
        android:layout_width="fill_parent"
    	android:layout_height="60dp"
    	android:orientation="horizontal" 
    	android:id="@+id/tel">
	    
        <TextView
            android:id="@+id/labeltel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/tel"
            android:textSize="20sp" />
        
	    <EditText 
	        android:id="@+id/telinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/telinput"
	        android:textSize="15sp"	        />
	</LinearLayout>    
	
	<LinearLayout      
        android:layout_width="fill_parent"
    	android:layout_height="60dp"
    	android:orientation="horizontal"
        android:layout_below="@+id/tel" 
    	android:id="@+id/card">
	    
        <TextView
            android:id="@+id/labelcard"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/card"
            android:textSize="20sp" />
        
	    <EditText 
	        android:id="@+id/cardinput"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/cardinput"
	        android:textSize="15sp"	        />
	</LinearLayout>
	<Button
        android:id="@+id/updatecardbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/cardinput"
        android:text="@string/updatebtn" />
	</LinearLayout>
</RelativeLayout>

    
    
    
</ScrollView>
    
    <!-- Side navigation drawer UI -->
        <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>
    </android.support.v4.widget.DrawerLayout>