<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sidecurb.LoginActivity2" >

          
    <EditText 
        android:id="@+id/emailinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="15sp"
        android:inputType="text"
        />
        
    <EditText 
        android:id="@+id/passwordinput"
        android:layout_width="match_parent"
        android:layout_below="@id/emailinput"
        android:layout_height="wrap_content"
        android:hint="@string/passwordinput"
        android:textSize="15sp"
        android:inputType="textPassword"
        />
    
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/passwordinput"
        android:text="@string/loginbtn" />

</RelativeLayout>
