<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >
    
    <TextView 
        android:id="@+id/email"    
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/emailinput"/>
        
    <EditText 
        android:id="@+id/emailinput"
        android:layout_width="fill_parent"
        android:layout_toRightOf="@id/email"
        android:layout_height="20dp"
        android:layout_alignBottom="@id/email"
        android:layout_marginLeft="38sp"
        android:textSize="40sp"
        android:inputType="text"
        />
    
    <TextView 
        android:id="@+id/password"    
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/email"
        android:text="@string/passwordinput"/>
        
    <EditText 
        android:id="@+id/passwordinput"
        android:layout_width="fill_parent"
        android:layout_toRightOf="@id/password"
        android:layout_height="20dp"
        android:layout_alignBottom="@id/password"
        android:layout_marginLeft="10sp"
        android:textSize="40sp"
        android:inputType="textPassword"
        />
    
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="10sp"
        android:layout_below="@id/password"
        android:text="@string/loginbtn" />

</RelativeLayout>
