<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sidecurb.MainActivity" >
    
    <ImageView
        android:id="@+id/homeimage"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/curbside" />
    
    <Button
        android:id="@+id/registerbtn"
        android:layout_below="@id/homeimage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="40sp"
        android:layout_marginTop="30sp"
        android:text="@string/register"
        />
    
    <TextView
        android:id="@+id/asklogin"
        android:layout_width="wrap_content"
        android:layout_weight=".70"
        android:layout_height="50dp"
        android:layout_below="@id/registerbtn"
        android:text="@string/ask_login"
        android:textSize="12sp" />
    
    <TextView 
       android:id="@+id/signclick"
       android:layout_width="fill_parent"
       android:layout_height="50dp"    
       android:layout_below="@id/registerbtn"
       android:layout_toRightOf="@id/asklogin" 
       android:layout_marginLeft="10sp" 
       android:text="@string/signin"
       android:textSize="12sp"
       android:layout_alignParentRight="true"               
       android:clickable="true"/>
    
    
    

</RelativeLayout>
